fix: scrollbar

--- a/style.css
+++ b/style.css
@@ -424,14 +424,15 @@ h3 {
   width: 10px;
 }
 
-::-webkit-scrollbar-track {
-  background-color: #f5f5f5;
-}
-
 ::-webkit-scrollbar-thumb {
-  background-color: #888;
+  background-color: #F1CDB3;
+  border-radius: 5px;
 }
 
 ::-webkit-scrollbar-button {
   background-color: #fff;
+}
+
+::-webkit-scrollbar-button {
+  display: none;
 }
